# advent_of_code

./: .gitignore  codecov.yml  newday.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: python-app.yml  python-ats.yml
2022/: advent_02.py  advent_03.py  advent_04.py  advent_05.py  advent_06.py  advent_07.py  advent_08.py  day10.py  day11.py  day12.py  day13.py  test_advent_04.py  test_advent_07.py  test_advent_08.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py
2022/01/: advent_01.py
2022/02/: advent_02.py
2022/03/: advent_03.py
2022/04/: test_advent_04.py
2022/06/: advent_06.py
2022/07/: advent_07.py  test_advent_07.py
2022/08/: advent_08.py
2022/09/: day09.py  test_day09.py
2022/10/: day10.py  day10_queue.py  test_day10.py
2022/11/: day11.py  test_day11.py
2022/12/: day12.py  test_day12.py
2022/13/: day13.py  test_day13.py
2022/14/: day14.py  test_day14.py
2022/15/: day15.py  test_day15.py
2022/16/: day16.py  test_day16.py
2022/17/: day17.py  test_day17.py
2022/18/: day18.py
2023/01/: advent_01.py
advent_of_code/: newday.py
advent_of_code/2022/01/: advent_01.py
advent_of_code/2022/02/: advent_02.py
advent_of_code/2022/03/: advent_03.py
advent_of_code/2022/04/: advent_04.py  test_advent_04.py
advent_of_code/2022/05/: advent_05.py
advent_of_code/2022/06/: advent_06.py
advent_of_code/2022/07/: advent_07.py  test_advent_07.py
advent_of_code/2022/08/: advent_08.py  test_advent_08.py
advent_of_code/utils/: grids.py  test_grids.py
templates/: day.py.template
(+70 files in other folders)
