[project]
name = "advent"
version = "2024.04.00"
description = "shepherdjay advent of code repo"
readme = "README.md"

requires-python = ">= 3.13"

dependencies = [
    "advent-of-code-data>=2.0.4",
    "colorama>=0.4.6",
    "numpy>=2.1.3",
    "pulp>=2.9.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "unsync>=1.4.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.122.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "hypothesis>=6.122.1",
    "pytest-benchmark>=5.1.0",
]
